--- a/emacs-notes.org
+++ b/emacs-notes.org
@@ -67,7 +67,7 @@
 CLOCK: [2016-01-12 Tue 11:28]--[2016-01-12 Tue 11:29] =>  0:01
 [2016-01-12 Tue 11:28]
 [[file:~/emacs/study/prelude/README.md::<kbd>C-c%20.%20%2B</kbd>%20|%20Increment%20integer%20at%20point.%20Default%20is%20%2B1.][file:~/emacs/study/prelude/README.md::<kbd>C-c . +</kbd> | Increment integer at point. Default is +1.]]
-* emacs tasks
+* TODO emacs tasks
 ** DONE integrate emacs delight
    CLOCK: [2016-01-17 Sun 11:30]--[2016-01-17 Sun 11:31] =>  0:01
    [2016-01-17 Sun 11:30]
@@ -127,3 +127,20 @@ mu find 'mime:image/*'
    CLOCK: [2016-01-18 Mon 11:26]--[2016-01-18 Mon 11:29] =>  0:03
    [2016-01-18 Mon 11:26]
 
+** TODO set up mu4e for encryption
+   CLOCK: [2016-01-20 Wed 11:26]--[2016-01-20 Wed 11:55] =>  0:29
+   [2016-01-20 Wed 11:25]
+
+   https://www.madboa.com/geek/gpg-quickstart/
+
+   #+BEGIN_EXAMPLE
+   gpg --gen-key
+   #+END_EXAMPLE
+
+   #+BEGIN_EXAMPLE
+   gpg --armor --output whalliburton-pubkey.txt --export 'whalliburton@gmail.com'
+   #+END_EXAMPLE
+
+   #+BEGIN_EXAMPLE
+   gpg --gen-revoke whalliburton@gmail.com
+   #+END_EXAMPLE
