--- a/emacs-notes.org
+++ b/emacs-notes.org
@@ -127,20 +127,27 @@ mu find 'mime:image/*'
    CLOCK: [2016-01-18 Mon 11:26]--[2016-01-18 Mon 11:29] =>  0:03
    [2016-01-18 Mon 11:26]
 
-** TODO set up mu4e for encryption
-   CLOCK: [2016-01-20 Wed 11:26]--[2016-01-20 Wed 11:55] =>  0:29
-   [2016-01-20 Wed 11:25]
+** TODO complete mail setup
+   http://jason.the-graham.com/2011/01/10/email_with_mutt_offlineimap_imapfilter_msmtp_archivemail/
+*** TODO set up mu4e for encryption
+    CLOCK: [2016-01-20 Wed 11:26]--[2016-01-20 Wed 11:55] =>  0:29
+    [2016-01-20 Wed 11:25]
 
-   https://www.madboa.com/geek/gpg-quickstart/
+    https://www.madboa.com/geek/gpg-quickstart/
 
-   #+BEGIN_EXAMPLE
-   gpg --gen-key
-   #+END_EXAMPLE
+    #+BEGIN_EXAMPLE
+    gpg --gen-key
+    #+END_EXAMPLE
 
-   #+BEGIN_EXAMPLE
-   gpg --armor --output whalliburton-pubkey.txt --export 'whalliburton@gmail.com'
-   #+END_EXAMPLE
+    #+BEGIN_EXAMPLE
+    gpg --armor --output whalliburton-pubkey.txt --export 'whalliburton@gmail.com'
+    #+END_EXAMPLE
 
-   #+BEGIN_EXAMPLE
-   gpg --gen-revoke whalliburton@gmail.com
-   #+END_EXAMPLE
+    #+BEGIN_EXAMPLE
+    gpg --gen-revoke whalliburton@gmail.com
+    #+END_EXAMPLE
+*** TODO set up msmtp
+*** TODO set up archivemail
+*** TODO use gnome-keyring
+http://www.clasohm.com/blog/one-entry?entry_id=90957
+** TODO in org normal mode enable smart tab
